common perftest base